--- a/flow/templates/flow/teams.html
+++ b/flow/templates/flow/teams.html
@@ -18,17 +18,12 @@
 <body>
   {% include 'flow/navbarAndFooter/navbar.html' %}
   <section>
-    <div class="svg-div">
-      <div class="svg-icon">
-        <h1 class="teamHeading">TEAMS</h1>
-        <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 16.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-        <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
-        <div class="svgIcon">
-          {%include 'flow/teamSvg.html' %}
-
-        </div>
-      </div>
+    <h1 class="teamHeading">TEAMS</h1>
+    <?xml version="1.0" encoding="utf-8"?>
+    <!-- Generator: Adobe Illustrator 16.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+    <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+    <div class="svgIcon">
+      {%include 'flow/teamSvg.html' %}
     </div>
   </section>
   <section>
@@ -53,8 +48,7 @@
             <div class="profile" data-team="{{ mem.teamName }}">
               <div class="profile-card">
                 <div class="img">
-                  <img
-                    src="https://1.bp.blogspot.com/-8c7QTLoyajs/YLjr2V6KYRI/AAAAAAAACO8/ViVPQpLWVM0jGh3RZhh-Ha1-1r3Oj62wQCNcBGAsYHQ/s16000/team-1-3.jpg">
+                  <img src="{{ mem.profile_img.url }}">
                 </div>
                 <div class="caption">
                   <h3>{{ mem.name }}</h3>
