--- a/flow/templates/flow/homepage.html
+++ b/flow/templates/flow/homepage.html
@@ -19,7 +19,7 @@
     <div class="video_container">
       <video id="dynamic_video" autoplay>
       </video>
-      <audio id="audio" src="{% static 'videos/bau.mp3' %}" autoplay></audio>
+      {% comment %} <audio id="audio" src="{% static 'videos/bau.mp3' %}" autoplay></audio> {% endcomment %}
     </div>
   </div>
   <div class="loading">
