--- a/flow/templates/flow/navbarAndFooter/navbar.html
+++ b/flow/templates/flow/navbarAndFooter/navbar.html
@@ -11,7 +11,7 @@
 			<div class="menu-wrap">
 				<ul class="menu">
 					<li class="menu-item">
-						<a class="no_border" href="#">Events</a>
+						<a class="no_border" href="{% url 'events' %}">Events</a>
 						<ul class="drop-menu">
 							<li class="drop-menu-item">
 								<a href="{% url 'events' %}">Events</a>
